[tool.poetry]
name = "refreshtoken"
version = "0.1.0"
description = "Refresh token backend"
authors = ["Yuretzz <yuvede@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
fastapi-jwt-auth = "^0.5.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"
pytest = "^7.2.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
